[package]
name = "stringed_wasm_core"
version = "0.1.0"
authors = ["neverRare"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
stringed_core = { path = "../core" }
wasm-bindgen = "0.2.69"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
